src/objects/personpx__c.object
<CustomObject>
    <fields>
        <fullName>pxglname__c</fullName>
        <label>培训名称</label>
        <referenceTo>trainmanagement__c</referenceTo>
        <relationshipName>pxglname</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>pxperson__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>参培学员</label>
        <referenceTo>User</referenceTo>
        <relationshipName>pxperson</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>remark__c</fullName>
        <label>备注</label>
        <type>TextArea</type>
    </fields>
    <label>参培学员</label>
    <nameField>
        <displayFormat>T{YYYY}{MM}-{0000}</displayFormat>
        <label>序号</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>参培学员</pluralLabel>
    <recordTypes>
        <fullName>RecordType11</fullName>
        <active>true</active>
        <label>常规技术培训人员</label>
    </recordTypes>
    <recordTypes>
        <fullName>RecordType11122</fullName>
        <active>true</active>
        <label>大型培训人员</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>